--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,12 +9,11 @@
     </head>
     <body>
 
-        </p>
 
 
-        <div class="content-wrapper">
+        <div>
             <section class="content">
-                <h2>Welcome</h2><label>"${name}"</label>
+                <h2>Welcome</h2>
                 <div class="row">
                     <div class="col-12">
                         <input id="txtTweet" class="form-control"/>
@@ -58,6 +57,7 @@
 
 
         <script type="text/javascript">
+            var _timeline;
            function getTimeLine() {
                    $.ajax({
                        async: false,
@@ -66,8 +66,11 @@
                        url: '/api/tweet/timeline',
                        contentType: "application/json",
                        success: function (result) {
+                           _timeline = result;
+                           console.log(result);
                            $('#timeline').empty();
                            $.each(result,function(k,v){
+                               var twitter_id = k;
                                $attachmentHtml = '';
                                if(v.mediaEntities!=null){
                                    $.each(v.mediaEntities,function (mv,mk){
@@ -81,6 +84,9 @@
                                    '        <label class="card-title">'+v.user.name+'</label>' +
                                    '        <label>'+v.createdAt+'</label>'+
                                    '        <div class="card-tools">' +
+                                   '          <button type="button" class="btn btn-tool btnRetweet"  tweetId="'+twitter_id+'">' +
+                                   '            <i class="fas fa-share-square"></i>' +
+                                   '          </button>' +
                                    '          <button type="button" class="btn btn-tool" data-card-widget="collapse">' +
                                    '            <i class="fas fa-minus"></i>' +
                                    '          </button>' +
@@ -93,20 +99,20 @@
                                             v.text+$attachmentHtml+
                                    '    </div>' +
                                    '    <div>' +
-                                   '        <input class="form-control"/ replayId="'+v.id+'">'  +
-                                   '        <input type="button" class="btnReplay" value="Replay"/>'+
+                                   '        <input class="form-control" tweetId="'+twitter_id+'">'  +
+                                   '        <input type="button" class="btnReply" value="Reply"/>'+
                                    '    </div>'+
                                    '</div>');
 
 
                            })
-                           console.log(result);
 
-                           $('.btnReplay').click(function (){
+
+                           $('.btnReply').click(function (){
                                var content = $(this).parent().children('.form-control').val();
-                               var replayId = $(this).parent().children('.form-control').attr('replayid');
+                               var tweetId = $(this).parent().children('.form-control').attr('tweetId');
                                if(content==""){
-                                   alert("Replay content empty.");
+                                   alert("Reply content empty.");
                                    return;
                                }
 
@@ -114,15 +120,36 @@
                                    async: false,
                                    type: "Post",
                                    dataType: "json",
-                                   url: '/api/tweet/replay',
+                                   url: '/api/tweet/reply',
                                    contentType: "application/json",
                                    data: JSON.stringify({
                                        "content": content,
-                                       "replayId" : replayId
+                                       "tweetId" : tweetId
                                    }),
                                    success: function (result) {
                                        console.log(result);
                                        alert('Success.');
+                                       location.reload();
+                                   }
+                               });
+                           });
+
+                           $('.btnRetweet').click(function (){
+                               var tweetId = $(this).attr('tweetId');
+
+                               $.ajax({
+                                   async: false,
+                                   type: "Post",
+                                   dataType: "json",
+                                   url: '/api/tweet/retweet',
+                                   contentType: "application/json",
+                                   data: JSON.stringify({
+                                       "tweetId" : tweetId
+                                   }),
+                                   success: function (result) {
+                                       console.log(result);
+                                       alert('Success.');
+                                       location.reload();
                                    }
                                });
                            });
@@ -151,6 +178,7 @@
                    success: function (result) {
                         console.log(result);
                         alert('Success.');
+                        location.reload();
                    }
                });
            });
